--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://sc-portfolio.netlify.app"
+                      href="https://sc-portfolio-site.netlify.app"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
