--- a/index.html
+++ b/index.html
@@ -230,33 +230,37 @@
                     React, React-Router-Dom, CSS Module
                   </h4>
                   <p class="project__description--para">
-                    📌 프로젝트 소개 React 이해도를 높여준 프로젝트입니다.
+                    📌 프로젝트 소개 <br />React 이해도를 높여준 프로젝트입니다.
                     React.js에 조금 더 익숙해진 계기가 되어 React Hook,
                     React-router에 대한 개념을 더욱 확실하게 숙지할 수
                     있었습니다.
                     <br />
                     <br />
+                    <br />
                     🔍 구현 기능 <br />
-                    이미지 슬라이드 아이템 차순 정렬 아이템 담기, 수량 증가,
+                    이미지 슬라이드, 아이템 차순 정렬, 아이템 담기, 수량 증가,
                     감소에 따른 가격 동적 구현 장바구니에 체크된 아이템 삭제,
                     체크된 아이템만 가격 동적 구현, 정규식을 통한 로그인
                     회원가입 페이지 구현
                     <br />
                     <br />
+                    <br />
                     ✏️ 배운점 & 아쉬운점 <br />
                     React를 사용해서 간단한 쇼핑몰을 구현했습니다. 그동안
                     명확하게 이해하지 못했던 React에 맞춰서 설계하려고
-                    노력했습니다. 컴포넌트로 구성돼 있고 하나의 컴포넌트는 다른
-                    여러 개의 컴포넌트로 구성될 수 있고 마치 레고 블록을
-                    조립하듯 컴포넌트들을 조립해서 개발할 수 있다는 점이
-                    편의성을 느꼈습니다. 정규식을 활용한 로그인, 회원가입 페이지
-                    장바구니, 카트 페이지 이미지 슬라이드, 제품 순 정렬 등록할
-                    수 있도록 구현했습니다. 또 React Router Dom, CSS Module에
-                    대해서 배울 수 있어서 개발자로서 더욱 성장할 수 있는
-                    프로젝트였습니다. State 잘 관리하는 것이 중요한데 이것이
-                    생각보다 어렵다고 느꼈습니다. 상태 관리를 위해서 Redux,
-                    Recoil 와 같은 상태 관리 라이브러리들을 사용을 하지 못해
-                    아쉬움이 남습니다.
+                    노력했습니다. <br /><br />
+                    컴포넌트로 구성돼 있고 하나의 컴포넌트는 다른 여러 개의
+                    컴포넌트로 구성될 수 있고 마치 레고 블록을 조립하듯
+                    컴포넌트들을 조립해서 개발할 수 있다는 점이 편의성을
+                    느꼈습니다. <br /><br />
+                    정규식을 활용한 로그인, 회원가입 페이지 장바구니, 카트
+                    페이지 이미지 슬라이드, 제품 순 정렬 등록할 수 있도록
+                    구현했습니다. 또 React Router Dom, CSS Module에 대해서 배울
+                    수 있어서 개발자로서 더욱 성장할 수 있는
+                    프로젝트였습니다.<br /><br />
+                    State 잘 관리하는 것이 중요한데 이것이 생각보다 어렵다고
+                    느꼈습니다. 상태 관리를 위해서 Redux, Recoil 와 같은 상태
+                    관리 라이브러리들을 사용을 하지 못해 아쉬움이 남습니다.
                     <br />
                   </p>
                   <div class="project__description--links">
@@ -298,22 +302,26 @@
                     사용해보며 이것의 차별적인 편의성을 느낄 수 있었습니다.
                     <br />
                     <br />
+                    <br />
                     🔍 구현 기능 <br />
                     원하는 키워드 검색 후 뉴스 보기, 카테고리별 뉴스 보기, 에러
                     헨들링
-                    <br /><br />
+                    <br />
+                    <br />
+                    <br />
                     ✏️ 배운점 & 아쉬운점 <br />
                     이번 프로젝트로 비동기 작업을 동기적인 것처럼 만들어 주는
                     async & await을 사용함으로써 자바스크립트에 동작원리를
-                    이해가 될 수 있었습니다. 많이 들어보긴 했지만 정작 직접
-                    사용해 본 적은 없던 Bootstrap를 처음으로 사용해 본
+                    이해가 될 수 있었습니다. <br /><br />많이 들어보긴 했지만
+                    정작 직접 사용해 본 적은 없던 Bootstrap를 처음으로 사용해 본
                     프로젝트입니다. 인기가 많은 Bootstrap를 처음 사용해 보며
                     편의성을 느낄 수 있었지만 구축되어 있는 스타일 요소가 많기
                     때문에 디자인과 기능이 정해져있어서 커스터 마이징에 숙련도
-                    부족을 느꼈습니다. 하지만 처음에는 낯설었지만 익숙해질수록
-                    점점 굉장히 매력적이라는 생각이 들었습니다. 이번에 사용한
-                    newsapi가 배포가 안되고 로컬에서만 돌릴 수 있어 아쉬움이
-                    남습니다. <br />
+                    부족을 느꼈습니다.<br /><br />
+                    하지만 처음에는 낯설었지만 익숙해질수록 점점 굉장히
+                    매력적이라는 생각이 들었습니다. 이번에 사용한 newsapi가
+                    배포가 안되고 로컬에서만 돌릴 수 있어 아쉬움이 남습니다.
+                    <br />
                   </p>
                   <div class="project__description--links">
                     <a
@@ -352,8 +360,10 @@
                     라이브러리 없이 바닐라 자바스크립트를 학습하며 만든
                     게임입니다. 어릴적 쥬니어 네이버에서 하던 퍼즐게임을
                     만드는데 타이핑게임, 투두 리스트에 비해 어려움과 개발 능력
-                    부족함을 느낀 프로젝트였습니다. 무작위로 셔플된 그림을
-                    드래그 이벤트를 이용하여 그림을 맞추는 게임을 구현했습니다.
+                    부족함을 느낀 프로젝트였습니다. <br /><br />무작위로 셔플된
+                    그림을 드래그 이벤트를 이용하여 그림을 맞추는 게임을
+                    구현했습니다.
+                    <br />
                     <br />
                     <br />
                     🔍 구현 기능 <br />
@@ -364,13 +374,17 @@
                     이미지들을 올바르게 정렬하면 complete이란 단어와 함께 게임
                     종료가 됩니다.<br />
                     종료 후 게임 시작버튼을 다시 누르면 게임타이머가 0초로
-                    초기화되고, 이미지가 랜덤하게 섞이게 됩니다. <br /><br />
+                    초기화되고, 이미지가 랜덤하게 섞이게 됩니다.
+                    <br />
+                    <br />
+                    <br />
                     ✏️ 배운점 & 아쉬운점 <br />
                     어릴 적 쥬니어 네이버에서 하던 퍼즐게임을 만드는데
                     타이핑게임, 투두 리스트에 비해 어려움과 개발 능력 부족함을
                     느끼게 되었지만 또한 주제 파악을 해주며, 겸손하게 만들어준
-                    프로젝트였습니다. 게임 편의성을 위해 힌트를 줄 수 있는 기능
-                    구현해야 했지만 그렇지 못해 아쉬움이 남습니다.<br />
+                    프로젝트였습니다.<br /><br />
+                    게임 편의성을 위해 힌트를 줄 수 있는 기능 구현해야 했지만
+                    그렇지 못해 아쉬움이 남습니다.<br />
                   </p>
                   <div class="project__description--links">
                     <a
@@ -422,8 +436,9 @@
                     끝난 할 일은 되돌리기 버튼을 클릭하면 다시 되돌릴 수
                     있습니다.<br />
                     탭을 이용해 아이템들을 상태별로 나누어서 볼 수 있습니다.<br />
-                    모바일 버전에서도 확인할 수 있는 반응형 웹입니다.<br /><br />
-
+                    모바일 버전에서도 확인할 수 있는 반응형 웹입니다.
+                    <br />
+                    <br />
                     ✏️ 배운점 & 아쉬운점 <br />
                     실제 사용하는 Google Tasks 비해 기능적으론 매우 부족하지만,
                     기본적인 기능들을 구현할 수 있다는 자신감을 가질 수 있는
