--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                   alt="Car subscription project"
                 />
                 <div class="project__description">
-                  <h3 class="project__description--title">News Page</h3>
+                  <h3 class="project__description--title">News Website</h3>
                   <h4 class="project__description--sub-title">
                     개발 인원: 1명(개인 프로젝트)<br />
                     Deployment: github<br />
@@ -311,28 +311,32 @@
                     <br />
                     ✏️ 배운점 & 아쉬운점 <br />
                     이번 프로젝트로 비동기 작업을 동기적인 것처럼 만들어 주는
-                    async & await을 사용함으로써 자바스크립트에 동작원리를
-                    이해가 될 수 있었습니다. <br /><br />많이 들어보긴 했지만
-                    정작 직접 사용해 본 적은 없던 Bootstrap를 처음으로 사용해 본
-                    프로젝트입니다. 인기가 많은 Bootstrap를 처음 사용해 보며
-                    편의성을 느낄 수 있었지만 구축되어 있는 스타일 요소가 많기
-                    때문에 디자인과 기능이 정해져있어서 커스터 마이징에 숙련도
-                    부족을 느꼈습니다.<br /><br />
+                    async & await을 사용과 에러헨들링을 통해 자바스크립트에
+                    동작원리를 이해가 될 수 있었습니다.
+                    <br /><br />
+                    많이 들어보긴 했지만 정작 직접 사용해 본 적은 없던
+                    Bootstrap를 처음으로 사용하여 편의성을 느낄 수 있었지만
+                    구축되어 있는 스타일 요소가 많기 때문에 디자인과 기능이
+                    정해져있어서 커스터 마이징에 숙련도 부족을 느꼈습니다.
+                    <br /><br />
                     하지만 처음에는 낯설었지만 익숙해질수록 점점 굉장히
-                    매력적이라는 생각이 들었습니다. 이번에 사용한 newsapi가
-                    배포가 안되고 로컬에서만 돌릴 수 있어 아쉬움이 남습니다.
+                    매력적이라는 생각이 들었습니다.
+                    <br /><br />
+                    페이지네이션 또한 별도의 라이브러리 없이 만들어 구조 파악에
+                    큰 도움되었습니다. 하지만 사용한 newsapi가 배포가 안되고
+                    로컬에서만 돌릴 수 있어 아쉬움이 남습니다.
                     <br />
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://github.com/feuer19/News"
+                      href="https://github.com/feuer19/News-Website"
                       target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://sc-news.netlify.app"
+                      href="https://scnews.netlify.app"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
