abouit_me info reivse commit

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
             </h1>
             <p class="about-me__info--para">
               <strong class="text--green"
-                >주어진 상황에서 최선을 하고자 사람</strong
+                >주어진 상황에서 최선을 다하고자 하는 사람</strong
               ><br />
               "실패를 걱정하지 말고 먼저 부지런히 목표를 향하여 노력하라 노력한
-              만큼 보상을 받을것이다” 알게된다는 평범한 신조를 경험을 통해서
-              얻으면서 한발 더 한발 더 노력하려 하는 모습을 만들려고 항상
-              노력중입니다. 지금도 이 순간도 성장하려고 합니다. 잘부탁드립니다.
+              만큼 보상을 받을 것이다”라는 말을 믿고 한 발씩 더 나아가 노력하려
+              하는 모습을 만들고자 노력 중입니다. 지금도 이 순간도 성장하려고
+              합니다. 잘 부탁드립니다.
             </p>
             <div class="about-me__links">
               <a href="" class="about-me__link">
