--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       type="image/png"
       sizes="96x96"
       rel="icon"
-      href="/assets/icons/page_favicon.png"
+      href="assets/icons/page_favicon.png"
     />
     <title>sc's portfolio</title>
     <link rel="stylesheet" href="./main.css" />
@@ -284,59 +284,50 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/portfolio_images/news_page.jpg"
+                  src="./assets/portfolio_images/Res_site.png"
                   class="project__img"
                   alt="Car subscription project"
                 />
                 <div class="project__description">
-                  <h3 class="project__description--title">News Website</h3>
+                  <h3 class="project__description--title">Travel Website</h3>
                   <h4 class="project__description--sub-title">
                     개발 인원: 1명(개인 프로젝트)<br />
                     Deployment: github<br />
-                    HTML, CSS, JavaScript, Bootstrap, API
+                    HTML, CSS, JavaScript,swiper,scrollreveal
                   </h4>
                   <p class="project__description--para">
                     📌 프로젝트 소개 <br />
-                    openAPI를 사용해 api를 호출하여 사용법을 익힐 수 있었던
-                    프로젝트였습니다. 인기가 많은 Bootstrap을 처음으로
-                    사용해보며 이것의 차별적인 편의성을 느낄 수 있었습니다.
+                    dark/light 테마변경, 비디오, 스크롤 애니메이션 기능등이 있는
+                    반응형 관광 웹페이지를 퍼블리싱한 프로젝트입니다.
                     <br />
                     <br />
                     <br />
                     🔍 구현 기능 <br />
-                    원하는 키워드 검색 후 뉴스 보기, 카테고리별 뉴스 보기, 에러
-                    헨들링
+                    dark/light 테마변경, 비디오 기능, interactive site
                     <br />
                     <br />
                     <br />
                     ✏️ 배운점 & 아쉬운점 <br />
-                    이번 프로젝트로 비동기 작업을 동기적인 것처럼 만들어 주는
-                    async & await을 사용과 에러헨들링을 통해 자바스크립트에
-                    동작원리를 이해가 될 수 있었습니다.
-                    <br /><br />
-                    많이 들어보긴 했지만 정작 직접 사용해 본 적은 없던
-                    Bootstrap를 처음으로 사용하여 편의성을 느낄 수 있었지만
-                    구축되어 있는 스타일 요소가 많기 때문에 디자인과 기능이
-                    정해져있어서 커스터 마이징에 숙련도 부족을 느꼈습니다.
-                    <br /><br />
-                    하지만 처음에는 낯설었지만 익숙해질수록 점점 굉장히
-                    매력적이라는 생각이 들었습니다.
-                    <br /><br />
-                    페이지네이션 또한 별도의 라이브러리 없이 만들어 구조 파악에
-                    큰 도움되었습니다. 하지만 사용한 newsapi가 배포가 안되고
-                    로컬에서만 돌릴 수 있어 아쉬움이 남습니다.
+                    혼자서 프로젝트를 수행하면서 어려움을 극복하고, 그것을
+                    해결하는 과정에서 더 많은 것을 배울 수 있었습니다. 이
+                    프로젝트를 통해 swiper,scrollreveal등 의 라이브러리를
+                    활용하는 경험을 얻었습니다. <br />
+                    기술적인 도전에 부딪히면서도 그것을 극복하고 새로운 것을
+                    배우는 즐거움을 느낄 수 있었습니다. 앞으로도 계속해서 새로운
+                    개인 프로젝트를 진행하여 더 나은 개발자로 성장해 나가고
+                    싶습니다.
                     <br />
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://github.com/feuer19/News-Website"
+                      href="https://github.com/feuer19/Travel_website"
                       target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://scnews.netlify.app"
+                      href="https://sctravel.netlify.app/"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
