--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <a href="" class="about-me__link">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="https://github.com/feuer19" class="about-me__link">
                 <i class="fab fa-github"></i>
               </a>
               <a href="" class="about-me__link">
@@ -170,6 +170,64 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
+                  src="./assets/portfolio_images/movie.jpg"
+                  class="project__img"
+                  alt="Car subscription project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Movie site</h3>
+                  <h4 class="project__description--sub-title">
+                    개발 인원: 1명(개인 프로젝트)<br />
+                    Deployment: Netlify<br />
+                    React,react-query, bootstrap, react-router, react-youtube,
+                    react-paginate, react-multi-carousel
+                  </h4>
+                  <p class="project__description--para">
+                    📌 프로젝트 소개 <br />
+                    이번 프로젝트는 실시간 데이터를 효과적으로 관리하고
+                    사용자에게 향상된 경험을 제공하는 웹 애플리케이션 개발을
+                    목표로 하였습니다. 리액트 쿼리(React Query)를 도입하여
+                    데이터 패칭, 캐싱, 동기화 및 에러 처리를 간편하게 구현하고,
+                    결과적으로 성능과 사용자 만족도를 높이는 데 중점을
+                    두었습니다.
+                    <br />
+                    <br />
+                    🔍 구현 기능 <br />
+                    키워드 검색, 영화 예고편 보기 <br />
+                    영화 선호도 정렬, 페이지네이션, 영화 슬라이드, 장르별 필터링
+                    <br />
+                    영화 상세페이지 ✏️ 배운점 & 아쉬운점 <br />
+                    리액트 쿼리는 데이터 패칭과 상태 관리를 훨씬 더 효율적이고
+                    간편하게 만들어주는 라이브러리라고 생각합니다. 프로젝트의
+                    복잡성을 줄이고, 사용자 경험을 개선하는 데 큰 도움이
+                    되었으며, 앞으로도 다양한 프로젝트에서 적극적으로 활용하고
+                    싶은 라이브러리입니다. 리액트 쿼리를 도입하면서 데이터
+                    관리의 부담을 덜고, 더 나은 품질을 개발할 수 있었습니다.
+                    처음 학습하는데 적용하기 어려움이 있긴 하지만, 전체적인 코드
+                    관리와 성능 개선을 고려하면 충분히 배울 가치가 있었던
+                    시간이였습니다.<br />
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/feuer19/movie_site/tree/master"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a
+                      href="https://scmovie.netlify.app"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
                   src="./assets/portfolio_images/ShoppingCart.png"
                   class="project__img"
                   alt="Car subscription project"
@@ -178,7 +236,7 @@
                   <h3 class="project__description--title">Shopping Cart</h3>
                   <h4 class="project__description--sub-title">
                     개발 인원: 1명(개인 프로젝트)<br />
-                    Deployment: github<br />
+                    Deployment: Netlify<br />
                     React, React-Router-Dom, redux-toolkit, MDBootstrap
                   </h4>
                   <p class="project__description--para">
@@ -226,7 +284,7 @@
                   <h3 class="project__description--title">Shopping Mall</h3>
                   <h4 class="project__description--sub-title">
                     개발 인원: 1명(개인 프로젝트)<br />
-                    Deployment: github<br />
+                    Deployment: Netlify<br />
                     React, React-Router-Dom, CSS Module
                   </h4>
                   <p class="project__description--para">
@@ -292,7 +350,7 @@
                   <h3 class="project__description--title">Travel Website</h3>
                   <h4 class="project__description--sub-title">
                     개발 인원: 1명(개인 프로젝트)<br />
-                    Deployment: github<br />
+                    Deployment: Netlify<br />
                     HTML, CSS, JavaScript,swiper,scrollreveal
                   </h4>
                   <p class="project__description--para">
@@ -347,7 +405,7 @@
                   <h3 class="project__description--title">Puzzle-Game</h3>
                   <h4 class="project__description--sub-title">
                     개발 인원: 1명(개인 프로젝트)<br />
-                    Deployment: github<br />
+                    Deployment: Netlify<br />
                     HTML, CSS, JavaScript
                   </h4>
                   <p class="project__description--para">
@@ -410,7 +468,7 @@
                   <h3 class="project__description--title">TODO LIST</h3>
                   <h4 class="project__description--sub-title">
                     개발 인원: 1명(개인 프로젝트)<br />
-                    Deployment: github<br />
+                    Deployment: Netlify<br />
                     HTML, CSS, JavaScript
                   </h4>
                   <p class="project__description--para">
@@ -466,64 +524,6 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/portfolio_images/typingGames.png"
-                  class="project__img"
-                  alt="Car subscription project"
-                />
-                <div class="project__description">
-                  <h3 class="project__description--title">Typing Game</h3>
-                  <h4 class="project__description--sub-title">
-                    개발 인원: 1명(개인 프로젝트)<br />
-                    Deployment: github<br />
-                    HTML, CSS, JavaScript
-                  </h4>
-                  <p class="project__description--para">
-                    📌 프로젝트 소개 <br />
-                    바닐라 자바스크립트를 학습하며 만든 Typing Game입니다. 저의
-                    첫 프로젝트이며, 기초적인 수준이지만 자바스크립트 기본기에
-                    대한 이해와 개발에 대한 호기심을 느끼게 해줬습니다. 일정
-                    시간에 단어를 올바르게 작성하여 맞출시 1점씩 획득하는 게임을
-                    구현했습니다.
-                    <br />
-                    <br />
-                    🔍 구현 기능 <br />
-                    게임 하단 game start 버튼 클릭 시 게임 시작<br />
-                    주어진 시간안에 단어를 input창에 올바르게 입력 시 1점
-                    획득<br />
-                    시간안에 맞추지 못할 시 게임 종료<br />
-                    종료 후 다시 game start 버튼 클릭 시 획득 점수,시간이 초기화
-                    게임 시작<br /><br />
-
-                    ✏️ 배운점 & 아쉬운점 <br />
-                    저의 첫 프로젝트이며, 기초적인 수준이지만 자바스크립트
-                    기본기에 대한 이해와 개발에 대한 호기심을 느끼게 해줬습니다.
-                    Javascript를 처음 사용해봤다는 의미도 있었지만,그 과정에서
-                    기본기를 한 번 더 깊게 다지고 Javascript를 실제로 사용해볼
-                    수 있었다는 점에서 더욱 의미가 있었습니다. 아직 HTML, CSS에
-                    레이아웃 배치 숙련도가 부족하다고 많이 느낀 프로젝트이기도
-                    합니다.<br />
-                  </p>
-                  <div class="project__description--links">
-                    <a
-                      href="https://github.com/feuer19/Typing-Game"
-                      target="_blank"
-                      class="project__description--link"
-                    >
-                      <i class="fab fa-github"></i>
-                    </a>
-                    <a
-                      href="https://sc-typinggame.netlify.app"
-                      class="project__description--link"
-                    >
-                      <i class="fas fa-link"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="project">
-              <div class="project__wrapper">
-                <img
                   src="./assets/portfolio_images/portfolio.png"
                   class="project__img"
                   alt="Car subscription project"
@@ -532,7 +532,7 @@
                   <h3 class="project__description--title">portfolio site</h3>
                   <h4 class="project__description--sub-title">
                     개발 인원: 1명(개인 프로젝트)<br />
-                    Deployment: github<br />
+                    Deployment: Netlify<br />
                     HTML, CSS, JavaScript
                   </h4>
                   <p class="project__description--para">
@@ -581,7 +581,7 @@
         </a>
         <div class="footer__social--list">
           <a
-            href=""
+            href="https://github.com/feuer19"
             target="_blank"
             class="footer__social--link link__hover-effect link__hover-effect--white"
             target="_blank"
