--- a/index.html
+++ b/index.html
@@ -12,18 +12,25 @@
     <title>sc's portfolio</title>
     <link rel="stylesheet" href="./main.css" />
     <script
-      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      src="https://kit.fontawesome.com/acbf87672f.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
-    <section id="about-me">
-      <nav>
+    <div class="header">
+      <nav class="navbar">
         <div class="personal__logo">
-          <img class="nav_logo" src="assets/icons/icons8-star.png" alt="" />SC's
-          portfolio
+          <img class="nav_logo" src="assets/icons/icons8-star.png" alt="" />
+          <span>SC's portfolio</span>
         </div>
         <ul class="nav__link--list">
+          <li class="nav__link">
+            <a
+              href="#about-me"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >About me</a
+            >
+          </li>
           <li class="nav__link">
             <a
               href="#languages"
@@ -38,15 +45,14 @@
               >Projects</a
             >
           </li>
-          <li class="nav__link">
-            <a
-              href="mailto:email@email.com"
-              class="nav__link--anchor nav__link--anchor-primary"
-              >Contact</a
-            >
-          </li>
         </ul>
+
+        <a class="navbar__toggleBtn">
+          <i class="fa-solid fa-bars"></i>
+        </a>
       </nav>
+    </div>
+    <section id="about-me">
       <div class="flex flex-1">
         <div class="about-me__info row">
           <div class="about-me__info--container">
@@ -58,9 +64,10 @@
             </figure>
             <h1 class="about-me__info--title">
               안녕하세요.
-              <span class="text--green"
-                >현재 신입 프론트엔드 개발자로 구직중입니다!</span
-              >&nbsp;<span class="wave">👋</span>
+              <span class="text--green">현재 구직중입니다!</span>&nbsp;<span
+                class="wave"
+                >👋</span
+              >
             </h1>
             <p class="about-me__info--para">
               <strong class="text--green"
@@ -111,10 +118,7 @@
                   class="language__img"
                 />
               </figure>
-              <span class="language__name"
-                >HTML<br />Semantic Web에 대한 이해를 바탕으로 적절한 Semantic
-                Tag를 사용합니다.</span
-              >
+              <span class="language__name">HTML</span>
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
@@ -124,10 +128,7 @@
                   class="language__img"
                 />
               </figure>
-              <span class="language__name"
-                >CSS<br />프로젝트의 디자인에 알맞은 스타일을 적용할 수
-                있습니다.</span
-              >
+              <span class="language__name">bootstrap<br />Sass</span>
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
@@ -137,10 +138,7 @@
                   class="language__img"
                 />
               </figure>
-              <span class="language__name"
-                >JavaScript<br />jS 문법 바탕으로 적절한 로직을 구현 할 수 있고
-                ES6 문법을 활용할 수 있습니다.</span
-              >
+              <span class="language__name">JavaScript</span>
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
@@ -151,9 +149,8 @@
                 />
               </figure>
               <span class="language__name"
-                >React<br />
-                컴포넌트의 재사용성을 고려해 컴포넌트를 구현할 수 있고 함수형
-                컴포넌트를 선호합니다.
+                >React-Query<br />
+                redux-toolkit
               </span>
             </div>
           </div>
@@ -610,11 +607,16 @@
           >
         </div>
         <div class="footer__copyright">
-          © 2023. Untitled. All rights reserved.<br />
-          포트폴리오 용도로 제작하였으며 상업적인 용도로 사용하지 않음을
-          밝힙니다.
+          © 2024. Untitled. All rights reserved.<br />
         </div>
       </div>
     </footer>
+    <a href="#" class="arrow-up-btn">
+      <figure>
+        <img src="./assets/icons/icons8-self-improvement-64.png" alt="" />
+      </figure>
+    </a>
+
+    <script src="main.js"></script>
   </body>
 </html>
